src/styles.css
@font-face {
  font-family: 'Mono';
  src: url('./assets/fonts/InputMono-Regular.ttf') format('truetype');
  font-weight: normal;
  font-style: normal;
}

*, *:before, *:after {
  box-sizing: inherit;
}

html {
  background-color: #222;
  box-sizing: border-box;
}

body {
  font-family: 'Mono';
  font-size: 12px;
  color: #eee;
  margin: 0px;
  background-color: #222;
}

button {
  font-family: inherit;
  font-size: inherit;
  color: inherit;
  background: none;
  border: none;
  outline: none;
  cursor: pointer;
}

button:hover, button:active {
  text-decoration: underline;
}

table {
  margin-top: 10px;
}

svg {
  pointer-events: none;
}

th {
  text-align: left;
  border-bottom: 1px solid #888;
}

td {
  vertical-align: center;
}

td button {
  display: flex;
}

input[type=text], input[type=password] {
  font-family: inherit;
  font-size: inherit;
  background-color: #222;
  color: #eee;
  border: none;
}

input[type=text]:focus, input[type=password]:focus {
  background-color: #222;
  border: none;
  outline: none;
}

input[type="radio"] {
  -webkit-appearance: none;
  appearance: none;
  display: inline-block;
  width: 10px;
  height: 10px;
  padding: 2px;
  background-clip: content-box;
  border: 1px solid #bbb;
  background-color: #222;
  border-radius: 50%;
  margin: 0 3px;
}

/* appearance for checked radiobutton */
input[type="radio"]:checked {
  background-color: #eee;
}

input[type="radio"]:focus {
  outline: none;
}

input[type=file] {
  font-family: inherit;
  font-size: 10px;;
  color: #eee;
}

input[type=file] button {
  font-family: inherit;
  font-size: inherit;
  color: #eee;
}

::-webkit-file-upload-button { /*Input file button styling*/
  font-family: inherit;
  font-size: 12px;
  color: inherit;
  background: none;
  border: 1px solid #bbb;
  border-radius: 4px;
  outline: none;
  cursor: pointer;
}

::-webkit-file-upload-button:hover {
  background-color: #333;
}

input[type=submit] {
  font-family: inherit;
  font-size: 12px;
  color: inherit;
  background: none;
  border: 1px solid #bbb;
  border-radius: 4px;
  outline: none;
  cursor: pointer;
}

input[type=submit]:hover {
  background-color: #333;
}

#first {
  border: 0px;
}

.root {
  display: flex;
  flex-direction: column;
  background-color: #222;
  height: 100vh;
  width: 100vw;
}

.drag {
  -webkit-app-region: drag;
  width: 100%;
  height: 25px;
}

.login {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 100%;
}

.login .artist-and-pw {
  display: flex;
  flex-direction: column;
  align-items: flex-end;
}

.header {
  display: flex;
  flex-direction: row;
  align-items: stretch;
  padding-left: 5px;
  height: 25px;
}

.header .header-right {
  display: flex;
  flex-direction: row;
  align-items: center;
  margin-left: auto;
}

.header button {
  margin-right: 5px;
}

.header .enabled {
  display: flex;
  align-items: center;
  justify-content: center;
  stroke: #bbb;
}

.header .enabled:hover {
  stroke: #eee;
}

.header .disabled {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  stroke: #444;
}

.header .refresh {
  display: flex;
  align-items: center;
  justify-content: center;
  stroke: #bbb;
}

.header .refresh:hover {
  stroke: #eee;
}

.main {
  display: flex;
  flex-direction: row;
  flex: 1;
  overflow: hidden;
}

.nav {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: flex-start;
  width: 140px;
  padding-left: 5px;
  padding-top: 2px;
  color: #888;
}

.nav button {
  height: 20px;
}

.nav .selected {
  color: #eee;
}

.content {
  position: relative;
  width: 100%;
  overflow-y: auto;
  margin-bottom: 50px;
  padding-left: 5px;
  padding-right: 10px;
  padding-top: 2px;
}

.player {
  position: fixed;
  bottom: 0;
  display: flex;
  flex-direction: row;
  align-items: center;
  width: 100%;
  height: 50px;
  background-color: #222;
}

.player button {
  display: flex;
  width: 30px;
  margin-left: 10px;
}

.player .title-and-artist {
  margin: 0px;
  border: 1px solid yellow;
}

/* album element */
.album .main .album-icon {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 25px;
}

.albumView .description {
  color: #888;
  margin-top: 10px;
  margin-bottom: 20px;
  margin-left: 25px;
  font-size: 11px;
}

.albumView .song {
  margin-left: 18px;
}

/* song element */
.song-view-files {
  height: 100%;
  overflow: auto;
}

.song-view-comments {
  height: calc(100% - 20px);
  overflow: auto;
}

.song-view-main {
  color: #888;
  margin-left: 8px;
}

.song-view-main .comment-container {
  display: flex;
  align-items: center;
  position: absolute;
  bottom: 0;
  left: 0;
  background-color: #222;
  width: 100%;
}

.comment-container .marker {
  color: #eee;
  margin-left: 13px;
}

.comment-container textarea {
  border: none;
  background-color: #222;
  color: #eee;
  flex: 1;
  margin-left: 5px;
  margin-right: 5px;
  resize: none;
}

.comment-container textarea:focus {
  outline: none;
}

.comment-container button {
  color: #eee;
}

.comment {
  margin: 5px 0;
}

.song-view-main button {
  padding: 0px;
  margin-right: 10px;
}

.song-view-main .selected {
  text-decoration: underline;
  color: #eee;
}

/*song and album*/
.song, .album {
  display: flex;
  flex-direction: column;
  margin-bottom: 5px;
}

.song .main, .album .main {
  display: flex;
  flex-direction: row;
  align-items: stretch;
  cursor: pointer;
  height: 20px;
  padding-top: 0;
}

.song .main p, .album .main p {
  display: flex;
  align-items: center;
  margin-top: 0;
  margin-bottom: 0;
}

.song .main .artist, .album .main .artist {
  width: auto;
  padding: 0px;
}

.song .main button, .album .main button {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 25px;
}

.title-and-artist {
  display: flex;
  flex-direction: row;
  padding: 0;
  align-content: stretch;
  overflow: hidden;
  margin-right: 10px;
}

.title {
  overflow: hidden;
  text-overflow: ellipsis;
}

.tag {
  display: flex;
  align-items: center;
  font-size: 10px;
  color: #888;
  margin-left: auto;
  margin-right: 5px;
  margin-top: 0px;
  margin-bottom: 0px;
}

.separator {
  margin-left: 5px;
  margin-right: 5px;
}

.actions {
  display: flex;
  flex-direction: column;
}

.actions-inner {
  display: flex;
  flex-direction: row;
  align-items: stretch;
  font-size: 10px;
  color: #888;
  margin-left: 21px;
  height: 20px;
}

.actions-inner button {
  padding: 0 5px;
}

.actions-delete {
  display: flex;
  flex-direction: row;
  align-items: center;
  font-size: 10px;
  color: #C44;
  margin-left: 25px;
  height: 20px;
}

.pin-icon {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-left: auto;
  margin-right: 5px;
}

.file input[type=checkbox] {
  cursor: pointer;
}

.artist .name-and-follow {
  display: flex;
  flex-direction: row;
  align-items: center;
  margin-bottom: 5px;
}

.artist .name-and-follow button {
  border: 1.5px solid #bbb;
  border-radius: 4px;
  margin-left: 10px;
  text-decoration: none;
}

.artist .name-and-follow button:hover {
  background-color: #333;
}

.artist .name-and-follow .following {
  background-color: #bbb;
  color: #222;
}

.artist .name-and-follow .following:hover {
  background-color: #ccc;
}

.artist .bio {
  color: #888;
  margin-bottom: 20px;
  font-size: 11px;
}

.artist .location-div {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.artist .location-div svg {
  margin-right: 5px;
}

.artist .location-div p {
  margin: 0px;
}

.comments {
  margin-top: 10px;
}

.comments p {
  color: #eee;
  margin: 0;
}

.delete {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-top: 30px;
}

.delete p {
  text-align: center;
}

/*UploadView*/
.upload-song {
  padding: 5px;
  margin-bottom: 10px;
}

.upload-song button {
  padding: 0;
  margin-top: 10px;
  margin-right: 10px;
  font-size: 11px;
}

.upload-file {
  padding: 5px;
  margin: 10px 5px;
}

.upload-description {
  display: flex;
  flex-direction: column;
}

.album-textarea {
  border: 2px groove #bbb;
  background-color: #222;
  color: #eee;
  margin: 0 2px;
  margin-top: 5px;
  margin-bottom: 10px;
  resize: vertical;
}
.album-textarea:disabled {
  background-color: #333;
}

.album-textarea:focus {
  outline: none;
}

.label-disabled {
  color: #888;
}

.radio-group-div {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.radio-div {
  display: flex;
  flex-direction: row;
  align-items: center;
  margin-right: 5px;
}

.upload-bottom-bar {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
}

.upload-bottom-bar .add-song {
  padding-left: 0px;
}

/**Spinner**/
.spinner {
  content: " ";
  display: block;
  width: 12px;
  height: 12px;
  border-radius: 50%;
  border: 2px solid #fff;
  border-color: #fff #fff #fff transparent;
  animation: spinner 1.2s linear infinite;
}

@keyframes spinner {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

/**Transfers**/
.transfers-view .clear-all {
  margin-top: 20px;
}

.transfer td {
  max-width: 100px;
  overflow: hidden;
  text-overflow: ellipsis;
}

.transfer button:disabled {
  color: #888;
  cursor: default;
}
.transfer button:hover:disabled {
  text-decoration: none;
}

.transfer .resume {
  display: flex;
  align-items: center;
  justify-content: center;
  stroke: #bbb;
}

.transfer .refresh:hover {
  stroke: #eee;
}

.transfer .resume:disabled {
  stroke: #666;
}

.transfer .resume:hover:disabled {
  stroke: #666;
}

.transfer .clear {
  display: flex;
  align-items: center;
  justify-content: center;
  stroke: #bbb;
}

.transfer .clear:hover {
  stroke: #eee;
}

.transfer .actions-cell {
  display: flex;
  flex-direction: row;
  align-items: center;
}

